@@ -450,31 +450,22 @@ class CChart extends CGraphDraw {
 				}
 
 				$trigger = API::UserMacro()->resolveTrigger($trigger);
-				if (!preg_match('/\{([0-9]{1,})\}\s*?([\<\>\=]{1})\s*?([0-9\.]{1,})([K|M|G]{0,1})/i', $trigger['expression'], $arr)) {
+				if (!preg_match('/^\{([0-9]+)\}\s*?([\<\>\=]{1})\s*?([0-9\.]+)([TGMKsmhdw]?)$/', $trigger['expression'], $arr)) {
 					continue;
 				}
 
-				$val = $arr[3];
-				if (strcasecmp($arr[4],'K') == 0) {
-					$val *= 1024;
-				}
-				elseif (strcasecmp($arr[4], 'M') == 0) {
-					$val *= 1048576; //1024*1024;
-				}
-				elseif (strcasecmp($arr[4], 'G') == 0) {
-					$val *= 1073741824; //1024*1024*1024;
-				}
+				$val = convert($arr[3].$arr[4]);
 
 				$minY = $this->m_minY[$this->items[$inum]['axisside']];
 				$maxY = $this->m_maxY[$this->items[$inum]['axisside']];
 
-				array_push($this->triggers, array(
+				$this->triggers[] = array(
 					'skipdraw' => ($val <= $minY || $val >= $maxY),
 					'y' => $this->sizeY - (($val - $minY) / ($maxY - $minY)) * $this->sizeY + $this->shiftY,
 					'color' => getSeverityColor($trigger['priority']),
 					'description' => _('Trigger').': '.CTriggerHelper::expandDescription($trigger),
 					'constant' => '['.$arr[2].' '.$arr[3].$arr[4].']'
-				));
+				);
 				++$cnt;
 			}
 		}
